--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,34 @@
-flask
-transformers
-torch
-nltk
-fuzzywuzzy
-python-Levenshtein
-gunicorn
+blinker==1.8.2
+certifi==2024.6.2
+charset-normalizer==3.3.2
+click==8.1.7
+filelock==3.14.0
+Flask==3.0.3
+fsspec==2024.6.0
+fuzzywuzzy==0.18.0
+huggingface-hub==0.23.2
+idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+joblib==1.4.2
+Levenshtein==0.25.1
+MarkupSafe==2.1.5
+mpmath==1.3.0
+networkx==3.3
+nltk==3.8.1
+numpy==1.26.4
+packaging==24.0
+python-Levenshtein==0.25.1
+PyYAML==6.0.1
+rapidfuzz==3.9.3
+regex==2024.5.15
+requests==2.32.3
+safetensors==0.4.3
+sympy==1.12.1
+tokenizers==0.19.1
+torch==2.3.0
+tqdm==4.66.4
+transformers==4.41.2
+typing_extensions==4.12.1
+urllib3==2.2.1
+Werkzeug==3.0.3
